@@ -1,3 +1,5 @@
+#!/bin/sh
+
 aclocal
 autoconf
 automake --add-missing
