@@ -1,7 +1,9 @@
+#!/bin/sh
+
 make clean
 rm -f config.status config.cache config.log configure Makefile.in Makefile aclocal.m4 confdefs.h gtk-splitter.spec
 rm -f src/Makefile.in
 rm -f src/Makefile
 rm -fr src/.deps
-rm -fr autom4te.cache
+rm -fr autom4te*
 
